Update Regression model CV.ipynb

--- a/Regression model CV.ipynb
+++ b/Regression model CV.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Q:/Outputs/Personal working folder/Maulik/ambition data/regression model/train.csv')"
+    "df = pd.read_csv(-------/train.csv')"
    ]
   },
   {
