--- a/Regression model.ipynb
+++ b/Regression model.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Q:/Outputs/Personal working folder/Maulik/ambition data/regression model/train.csv')"
+    "df = pd.read_csv('----/train.csv')"
    ]
   },
   {
@@ -2549,7 +2549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv('Q:/Outputs/Personal working folder/Maulik/ambition data/regression model/test.csv')"
+    "df_test = pd.read_csv('-----/test.csv')"
    ]
   },
   {
